--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/buttondemo.css" />
@@ -31,26 +32,28 @@
 			<li id="slide-2">
 				<ol class="sub-slides">
 					<li>
-						<div class="cd-slider-content">
+						<div class="cd-slider-content" id="zara" song="LushLife">
 							<div class="content-wrapper artist1">
 								<h2>Lush Life</h2>
 								<h3>Zara Larsson</h3>
 
-								<div class="lyrics" id="zara" song="LushLife">
-									<div time="500">But that thing went bust</div>
-									<div time="700">So I gave it up</div>
-									<div time="800">No tricks no bluff</div>
-									<div time="3000">I’m just better off</div> 
-									<div> without them <span class="boxcover">-----</span>.</div>
+								<div class="lyrics">
+									<div time="1000">But that thing went bust</div>
+									<div time="2465">So I gave it up</div>
+									<div time="5892">No tricks no bluff</div>
+									<div time="7420">I’m just better off</div> 
+									<div time="8526"> without them <span class="boxcover">-----</span>.</div>
 								</div>
 
-								<span class="input input--hoshi">
+								<span class="input input--hoshi" style="visibility: hidden">
 									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
-								<div class="progress-button">
-									<button onclick="app.playSong('post/LushLifePost.mp3'); $(this).parents('.cd-slider-content').trigger('swipeleft'); app.playSong('pre/PandaPre.mp3');"><span>Next</span></button>
+
+								<div class="progress-button" style="visibility: hidden">
+									<button onclick="app.playPostSong(this);"><span>Next</span></button>
+
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -60,25 +63,28 @@
 					</li>
 
 					<li>
-						<div class="cd-slider-content">
+						<div class="cd-slider-content" song="Panda">
+
 							<div class="content-wrapper artist2">
 								<h2>Panda</h2>
 								<h3>Desiigner</h3>
 
 								<div class="lyrics">
-									<div time="200">Panda, panda, panda, panda, panda,</div>
-									<div time="500"><span class="boxcover">-----</span></div>
-									<div time="600">panda, panda, panda.</div>
+
+									<div time="3457">Panda, panda, panda,</div>
+									<div time="7633">panda, panda, panda,</div>
+									<div time="8871">panda, <span class="boxcover">-----</span>, panda.</div>
+
 								</div>
 
 
-								<span class="input input--hoshi">
+								<span class="input input--hoshi" style="visibility: hidden">
 									<input class="jevlainput input__field input__field--hoshi" type="text" id="input-4" />
 									<label class="input__label" for="input-4" style="border-bottom: 2px solid black; width: 100%; "></label>
 								</span><br/>
 
-								<div class="progress-button">
-									<button><span>Next</span></button>
+								<div class="progress-button" style="visibility: hidden">
+									<button onclick="app.playPostSong(this);"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
@@ -88,15 +94,16 @@
 					</li>
 
 					<li>
-						<div class="cd-slider-content">
+						<div class="cd-slider-content" song="Coldplay">
+
 							<div class="content-wrapper artist3">
 								<h2>Hymn For the Weekend</h2>
 								<h3>Coldplay</h3>
 
 								<div class="lyrics">
-									<div>When I was a river dried up</div>
-									<div>You came to rain a flood</div>
-									<div>So <span class="boxcover">-----</span>.</div>
+									<div time="210">When I was a river dried up</div>
+									<div time="5538">You came to rain a flood</div>
+									<div time="10672">So <span class="boxcover">-----</span>.</div>
 								</div>
 								
 
@@ -106,7 +113,7 @@
 								</span><br/>
 
 								<div class="progress-button">
-									<button><span>Next</span></button>
+									<button onclick="app.playPostSong(this);"><span>Next</span></button>
 									<svg class="progress-circle" width="70" height="70"><path d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"/></svg>
 									<svg class="checkmark" width="70" height="70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg>
 									<svg class="cross" width="70" height="70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg>
